infra/ingresses/giiveway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giiveaway-front-ingress
  namespace: giiveaway
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: giiveaway.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: giiveaway-front
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giiveaway-api-ingress
  namespace: giiveaway
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: api.giiveaway.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: giiveaway-api
            port:
              number: 3000
